Сompleted task 'improved traffic light'

--- a/task3/css/style.css
+++ b/task3/css/style.css
@@ -221,6 +221,11 @@ body {
 	transition: 0.3s linear 0.03s;
 }
 
+.task_2__item-container {
+	max-width: 100px;
+	margin: 0 auto;
+}
+
 .task_2__item {
 	width: 100px;
 	height: 100px;
